--- a/src/index.html
+++ b/src/index.html
@@ -11,8 +11,13 @@
 <body>
   <main>
     <h1>Azure Static Web App</h1>
+    <h2>This is a sub-header.</h2>
     <p>Loading message from the API: <b id="name"> ... </b></p>
   </main>
 </body>
 
 </html>
+
+
+
+
